force-app/main/default/objects/DocGen_Settings__c/fields/Experience_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Experience_Site_Url__c</fullName>
    <description>The base URL of the Experience Cloud site where signatures are captured (e.g. https://domain.com/s/sign).</description>
    <label>Experience Site URL</label>
    <type>Url</type>
</CustomField>