force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Email_Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Signature_Email_Footer_Text__c</fullName>
    <description>Custom footer text displayed at the bottom of signature request emails. Supports plain text. Example: "© 2026 Acme Corp. All rights reserved."</description>
    <label>Signature Email Footer Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>